@@ -1,3 +1,11 @@
+2010-09-14  Marco Randazzo <marco.randazzo@iit.it>
+	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
+	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
+	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
+	* src/libYARP_dev/src/RemoteControlBoard.cpp
+	
+	Added two new methods to torqueControl interface: getTorqueRange(), getTorqueRanges()
+	
 2010-09-10  Lorenzo Natale  <lorenzo.natale@iit.it>
    * src/libYARP_math/
    
